Implemented Cart, bugfixes
