# api/swagger.yaml
@@ -195,8 +195,6 @@ paths:
                 description: "Array containing the themes of the book"
                 items:
                   type: "string"
-        400:
-          description: "Invalid Request!"
         404:
           description: "Book not found"
       x-swagger-router-controller: "Book"
@@ -236,8 +234,13 @@ paths:
               $ref: "#/definitions/Book"
         400:
           description: "Bad Input!"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
         404:
-          description: "Unexpected error"
+          description: "No books found matching the given criteria!"
       x-swagger-router-controller: "Book"
   /books/{bookId}/events:
     get:
@@ -423,7 +426,7 @@ paths:
       responses:
         200:
           description: "The username is available"
-        404:
+        409:
           description: "The username is not available"
       x-swagger-router-controller: "User"
   /user/emailAvailable/{email}:
@@ -443,7 +446,9 @@ paths:
       responses:
         200:
           description: "The email is not already registered"
-        404:
+        400:
+          description: "Not valid email string"
+        409:
           description: "An user was previously registered with this email."
       x-swagger-router-controller: "User"
   /user/delete:
@@ -503,7 +508,7 @@ paths:
         200:
           description: "Successful add"
         400:
-          description: "Invalid request!"
+          description: "Some parameters are missing or the given ones have bad syntax"
         403:
           description: "Not authorized!"
       x-swagger-router-controller: "Address"
@@ -549,7 +554,7 @@ paths:
         200:
           description: "Successful update!"
         400:
-          description: "Invalid request!"
+          description: "Missing parameters or the given ones have bad syntax"
         403:
           description: "Not authorized!"
       x-swagger-router-controller: "Address"
@@ -597,7 +602,7 @@ paths:
         200:
           description: "Successful operation"
         400:
-          description: "Invalid request"
+          description: "Missing parameters or the given ones have bad syntax"
         403:
           description: "Unathorized"
       x-swagger-router-controller: "User"
@@ -616,8 +621,6 @@ paths:
           description: "Successful operation"
           schema:
             $ref: "#/definitions/User"
-        400:
-          description: "Invalid request!"
         403:
           description: "Not Authorized!"
       x-swagger-router-controller: "User"
@@ -672,7 +675,8 @@ paths:
       parameters:
       - name: "limit"
         in: "query"
-        description: "Max number of items to show"
+        description: "Maximum number of items per page. Default is 20 and cannot exceed\
+          \ 500."
         required: false
         type: "integer"
       - name: "offset"
@@ -733,7 +737,7 @@ paths:
         format: "int64"
       - name: "quantity"
         in: "query"
-        description: "Number of copies to remove from the cart"
+        description: "Number of copies to remove from the cart. Default is 1"
         required: false
         type: "integer"
       responses:
@@ -793,8 +797,6 @@ paths:
           description: "Successful operation"
           schema:
             $ref: "#/definitions/Author"
-        400:
-          description: "Invalid request!"
         404:
           description: "Author not found!"
       x-swagger-router-controller: "Author"
@@ -891,8 +893,6 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Event"
-        400:
-          description: "Invalid request"
         404:
           description: "No events found!"
       x-swagger-router-controller: "Event"
@@ -944,8 +944,6 @@ paths:
           description: "Successful operation"
           schema:
             $ref: "#/definitions/Order"
-        400:
-          description: "Invalid request"
         403:
           description: "Not authorized!"
       x-swagger-router-controller: "Order"
@@ -1011,7 +1009,7 @@ paths:
         200:
           description: "Successful placement"
         400:
-          description: "Bad Request"
+          description: "Missing parameters or the given ones have bad syntax"
         403:
           description: "Unauthorized"
       x-swagger-router-controller: "Order"
@@ -1101,9 +1099,12 @@ paths:
         200:
           description: "Successful operation"
         400:
-          description: "You provided invalid data!"
+          description: "Bad input data"
         403:
           description: "You must login to perform this operation!"
+        409:
+          description: "A review from the current user already exists on the given\
+            \ book"
       x-swagger-router-controller: "Review"
 definitions:
   User:
@@ -1171,93 +1172,97 @@ definitions:
       books:
         type: "array"
         items:
-          $ref: "#/definitions/Book"
+          $ref: "#/definitions/Cart_books"
     title: "Cart"
-    description: "Order for books"
+    description: "Contains books selected by a user, ready to be ordered"
     example:
       books:
-      - picture_path: "pic1.jpg"
-        price:
-          currency: "EUR"
-          value: 11
-        isbn: "123456679"
-        genre:
-          name: "Horror"
-          description: "Very scary"
-          genre_id: 1
-        publisher:
-          publisher_id: 1
-          hq_location:
-            country: "Italy"
-            province: "CO"
-            city: "Como"
-            latitude: 6.027456183070403
-            address_id: 1
-            street_line2: "11"
-            street_line1: "Via Valleggio"
-            zip_code: "22100"
-            longitude: 1.4658129805029452
-          name: "Zanichelli"
-          description: "description"
-        average_rating: 5.962133916683182
-        theme:
-          name: "name"
-          description: "description"
-        book_id: 1
-        title: "Il deserto dei tartari"
-        authors:
-        - surname: "Rossi"
-          name: "Mario"
-          biography: "biography"
-          author_id: 0
-          picture: "picture"
-        - surname: "Rossi"
-          name: "Mario"
-          biography: "biography"
-          author_id: 0
-          picture: "picture"
-        status: "Available"
-      - picture_path: "pic1.jpg"
-        price:
-          currency: "EUR"
-          value: 11
-        isbn: "123456679"
-        genre:
-          name: "Horror"
-          description: "Very scary"
-          genre_id: 1
-        publisher:
-          publisher_id: 1
-          hq_location:
-            country: "Italy"
-            province: "CO"
-            city: "Como"
-            latitude: 6.027456183070403
-            address_id: 1
-            street_line2: "11"
-            street_line1: "Via Valleggio"
-            zip_code: "22100"
-            longitude: 1.4658129805029452
-          name: "Zanichelli"
-          description: "description"
-        average_rating: 5.962133916683182
-        theme:
-          name: "name"
-          description: "description"
-        book_id: 1
-        title: "Il deserto dei tartari"
-        authors:
-        - surname: "Rossi"
-          name: "Mario"
-          biography: "biography"
-          author_id: 0
-          picture: "picture"
-        - surname: "Rossi"
-          name: "Mario"
-          biography: "biography"
-          author_id: 0
-          picture: "picture"
-        status: "Available"
+      - quantity: 6
+        book:
+          picture_path: "pic1.jpg"
+          price:
+            currency: "EUR"
+            value: 11
+          isbn: "123456679"
+          genre:
+            name: "Horror"
+            description: "Very scary"
+            genre_id: 1
+          publisher:
+            publisher_id: 1
+            hq_location:
+              country: "Italy"
+              province: "CO"
+              city: "Como"
+              latitude: 6.027456183070403
+              address_id: 1
+              street_line2: "11"
+              street_line1: "Via Valleggio"
+              zip_code: "22100"
+              longitude: 1.4658129805029452
+            name: "Zanichelli"
+            description: "description"
+          average_rating: 5.962133916683182
+          theme:
+            name: "name"
+            description: "description"
+          book_id: 1
+          title: "Il deserto dei tartari"
+          authors:
+          - surname: "Rossi"
+            name: "Mario"
+            biography: "biography"
+            author_id: 0
+            picture: "picture"
+          - surname: "Rossi"
+            name: "Mario"
+            biography: "biography"
+            author_id: 0
+            picture: "picture"
+          status: "Available"
+      - quantity: 6
+        book:
+          picture_path: "pic1.jpg"
+          price:
+            currency: "EUR"
+            value: 11
+          isbn: "123456679"
+          genre:
+            name: "Horror"
+            description: "Very scary"
+            genre_id: 1
+          publisher:
+            publisher_id: 1
+            hq_location:
+              country: "Italy"
+              province: "CO"
+              city: "Como"
+              latitude: 6.027456183070403
+              address_id: 1
+              street_line2: "11"
+              street_line1: "Via Valleggio"
+              zip_code: "22100"
+              longitude: 1.4658129805029452
+            name: "Zanichelli"
+            description: "description"
+          average_rating: 5.962133916683182
+          theme:
+            name: "name"
+            description: "description"
+          book_id: 1
+          title: "Il deserto dei tartari"
+          authors:
+          - surname: "Rossi"
+            name: "Mario"
+            biography: "biography"
+            author_id: 0
+            picture: "picture"
+          - surname: "Rossi"
+            name: "Mario"
+            biography: "biography"
+            author_id: 0
+            picture: "picture"
+          status: "Available"
       user_id: 0
       total_amount:
         currency: "EUR"
@@ -1838,6 +1843,62 @@ definitions:
       authors:
       - "authors"
       - "authors"
+  inline_response_400:
+    properties:
+      message:
+        type: "string"
+  Cart_books:
+    properties:
+      book:
+        $ref: "#/definitions/Book"
+      quantity:
+        type: "integer"
+        format: "int64"
+        description: "How many copies of the book the user has selected"
+    example:
+      quantity: 6
+      book:
+        picture_path: "pic1.jpg"
+        price:
+          currency: "EUR"
+          value: 11
+        isbn: "123456679"
+        genre:
+          name: "Horror"
+          description: "Very scary"
+          genre_id: 1
+        publisher:
+          publisher_id: 1
+          hq_location:
+            country: "Italy"
+            province: "CO"
+            city: "Como"
+            latitude: 6.027456183070403
+            address_id: 1
+            street_line2: "11"
+            street_line1: "Via Valleggio"
+            zip_code: "22100"
+            longitude: 1.4658129805029452
+          name: "Zanichelli"
+          description: "description"
+        average_rating: 5.962133916683182
+        theme:
+          name: "name"
+          description: "description"
+        book_id: 1
+        title: "Il deserto dei tartari"
+        authors:
+        - surname: "Rossi"
+          name: "Mario"
+          biography: "biography"
+          author_id: 0
+          picture: "picture"
+        - surname: "Rossi"
+          name: "Mario"
+          biography: "biography"
+          author_id: 0
+          picture: "picture"
+        status: "Available"
   Review_user:
     properties:
       first_name:
